--- a/lapsim_V2.0.ipynb
+++ b/lapsim_V2.0.ipynb
@@ -344,7 +344,9 @@
     "* Pre-allocate the data frame of the determine length with \"None\"\n",
     "* The dataframe should have columns: distance, time, and velocity\n",
     "\n",
-    "* No - just fill up all the distance, time, and velocity arrays backwards - that'll be the easiest way to go about this.\n"
+    "* No - just fill up all the distance, time, and velocity arrays backwards - that'll be the easiest way to go about this.\n",
+    "\n",
+    "* Now check for updates\n"
    ]
   }
  ],
