Starting to build the iteration part of the model

--- a/lapsim_V2.0.ipynb
+++ b/lapsim_V2.0.ipynb
@@ -4,27 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Table of Contents:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import math\n",
-    "import csv\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Input Constants from .csv\n",
     "\n",
     "NOTE: NEED TO ADD A CONSTANT TO CHOOSE EMRAX OR AMK MOTORS (AND THEN IT ONLY NEEDS TO READ THAT DATA - AND IT WILL ONLY ANALYZE CERTAIN DRIVETRAIN SECTIONS AS APPLICABLE - since the emrax data is less thorough...)"
@@ -36,6 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import math\n",
+    "import csv\n",
+    "import json\n",
+    "import dynamicsFunctions as dynF\n",
+    "\n",
     "# USER-INPUT CONSTANTS\n",
     "# TRACK FILE\n",
     "TRACK = None\n",
@@ -69,9 +56,7 @@
     "cell_aux_factor = None          # kg/kWh - SEGMENT AUXILLARY MASS/ENERGY\n",
     "\n",
     "# MOTOR CONSTANTS\n",
-    "max_motor_torque = None         # Nm - MAX MOTOR TORQUE\n",
-    "max_motor_rpm = None            # rpm - MAX MOTOR RPM\n",
-    "max_power = None                # W - MAX POWER - AS DEFINED BY USER (FOR POWER LIMITING)\n",
+    "motor_choice = None              # emrax / AMK - choose your motor\n",
     "\n",
     "# TRACTION CONSTANTS\n",
     "max_speed_kmh = None            # km/h - MAX SPEED\n",
@@ -124,22 +109,11 @@
     "    globals()[x] = y\n",
     "\n",
     "globals()[track_name] = track\n",
-    "globals()[regen_name] = regen"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Calculated Constants"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "globals()[regen_name] = regen\n",
+    "\n",
+    "###################################################################################\n",
+    "# CALCULATED CONSTANTS\n",
+    "\n",
     "# CONSTANTS - SHOULD NOT NEED CHANGING\n",
     "delta_d = 0.01           # distance interval - m\n",
     "g = 9.81                # m/s^2\n",
@@ -183,7 +157,7 @@
     "mu_f = F_friction / (test_mass * g)         # calculate the friction coefficient\n",
     "max_speed = max_speed_kmh / 3.6             # m/s\n",
     "max_traction_force = mass * g * longitudinal_friction   # N\n",
-    "F_friction = mu_f * mass * g                # friction force based on the evaluated car mass.    "
+    "F_friction = mu_f * mass * g                # friction force based on the evaluated car mass.  "
    ]
   },
   {
@@ -319,19 +293,17 @@
     "        # Iteration for distance, time, and velocity\n",
     "        # First: solve for delta time:\n",
     "        poly_coeffs = np.array([1/2, brakeSector_dict['Velocity'][j], -delta_d])          # coefficients: p[0] * x^n + ... + p[n]\n",
-    "        brakeSector_dict['Time'][j - 1] = np.roots(poly_coeffs)[1]                            # This is the delta_t\n",
+    "        dt = np.roots(poly_coeffs)[1]                            # This is the delta_t\n",
+    "        brakeSector_dict['Time'][j - 1] = brakeSector_dict['Time'][j] + dt\n",
     "\n",
     "        # then for v1\n",
-    "        brakeSector_dict['Velocity'][j - 1] = brakeSector_dict['Velocity'][j] + brake_decel * brakeSector_dict['Time'][j]\n",
+    "        brakeSector_dict['Velocity'][j - 1] = brakeSector_dict['Velocity'][j] + brake_decel * dt\n",
     "\n",
     "        # then for distance\n",
     "        brakeSector_dict['Distance'][j - 1] = brakeSector_dict['Distance'][j] + delta_d\n",
     "\n",
     "    # FINALLY: save the dataframe into the brakeDict\n",
-    "    brakeDict[sectors[i]] = brakeSector_dict\n",
-    "\n",
-    "# Now plot the data to check the reality of it...\n",
-    "print('debug pause')"
+    "    brakeDict[sectors[i]] = brakeSector_dict\n"
    ]
   },
   {
@@ -347,6 +319,163 @@
     "* No - just fill up all the distance, time, and velocity arrays backwards - that'll be the easiest way to go about this.\n",
     "\n",
     "* Now check for updates\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Begin the iteration:\n",
+    "# Vector length:\n",
+    "num_intervals = int(trackData.loc[trackData.index[-1], 'Cumulative Length'] / delta_d)\n",
+    "\n",
+    "# Vectors for each set of data\n",
+    "# Create a dictionary of values\n",
+    "headers = ['v0',                    # velocity vector (m/s)\n",
+    "           'r0',                    # distance vector (m)\n",
+    "           't0',                    # time vector (s)\n",
+    "           'w_wh',                  # wheel angular velocity (rad/s)\n",
+    "           \"w_m\",                   # motor angular velocity (rpm)\n",
+    "           \"T_m\",                   # motor torque (Nm)\n",
+    "           \"T_a\",                   # Axel torque (Nm)\n",
+    "           \"F_trac\",                # traction force (N)\n",
+    "           \"F_drag\",                # drag force (N)\n",
+    "           \"F_RR\",                  # rolling resistance (N)\n",
+    "           \"F_net_tan\",             # net force in the tangential direction (N)\n",
+    "           \"a_tan0\",                # tangential acceleration (m/s^2)\n",
+    "           \"a_norm0\",               # normal/centripetal acceleration (m/s^2)\n",
+    "           \"P_battery\",             # battery power (kW)\n",
+    "           \"P_battery_regen\",       # battery regen power (kW)\n",
+    "           \"Capacity\",              # Battery capacity (Ah)\n",
+    "           \"Pack Current\",          # Battery pack current (A)\n",
+    "           \"Energy Use\",            # energy use over time (kWh)\n",
+    "           \"SoC Energy\",            # state of charge - energy based (%)\n",
+    "           \"SoC Capacity\",          # state of charge - capacity based (%)\n",
+    "           \"Dissipated Power\",      # Power dissipated from batteries due to internal resistance (W)\n",
+    "           \"Battery Temp\",          # Temperature of battery pack (C)\n",
+    "           \"Heatsink Temp\",         # Temperature of the heat sink (C)\n",
+    "           \"Max Values\"]            # maximum battery power used, total energy used\n",
+    "dataDict = dict.fromkeys(headers)\n",
+    "\n",
+    "# add empty zero vectors\n",
+    "for i in range(0, len(headers)):\n",
+    "    if headers[i] != \"t0\":\n",
+    "        dataDict[headers[i]] = np.zeros(num_intervals)\n",
+    "\n",
+    "# Add some starting values\n",
+    "dataDict['Capacity'][0] = capacity0\n",
+    "dataDict['SoC Capacity'][0] = initial_SoC\n",
+    "dataDict['Battery Temp'][0] = batteryTemp0\n",
+    "dataDict['Heatsink Temp'][0] = heatsink_temp_0\n",
+    "\n",
+    "# CALCULATIONS\n",
+    "for i in range(0, num_intervals-1):\n",
+    "    # INITIAL CALCULATIONS\n",
+    "\n",
+    "    # Calculates the fastest next speed and the smallest possible time\n",
+    "    dataDict = dynF.fastestNextSpeed(dataDict, i)\n",
+    "\n",
+    "    #########################################  \n",
+    "    # TRACTION CALCULTIONS\n",
+    "\n",
+    "    # # Determine track location and current radius:\n",
+    "    # trackLocation = np.searchsorted(trackLength, dataDict['r0'][i])    # index of track location\n",
+    "\n",
+    "    # # break out of loop once we hit the end of the track\n",
+    "    # if trackLocation > len(trackRadius) - 1:              \n",
+    "    #     break\n",
+    "   \n",
+    "    # # determine instantaneous track radius\n",
+    "    # current_radius = trackRadius[trackLocation]\n",
+    "\n",
+    "    # # Now, check to find the maximum actually possible speed based on traction considerations\n",
+    "    # v_max = dynF.findMaxSpeed(current_radius, dataDict, i)\n",
+    "\n",
+    "    # Now determine whether we exceed that speed, and if so, recalculate the possible values\n",
+    "    if dataDict['v0'][i+1] > v_max:\n",
+    "        dataDict = dynF.limit_max_speed(dataDict, v_max, i)\n",
+    "\n",
+    "    # Add the braking\n",
+    "    # dataDict = dynF.batteryBrakeAndRegen(dataDict, i)\n",
+    "\n",
+    "    ###########################################\n",
+    "\n",
+    "    # Determine battery power used during the race\n",
+    "    if dataDict['F_trac'][i] > 0:\n",
+    "        dataDict = dynF.batteryPower(dataDict, i)\n",
+    "    else:\n",
+    "        dataDict['P_battery'][i] = 0\n",
+    "\n",
+    "    ###########################################\n",
+    "    # Add the further battery calcs here:\n",
+    "    # For my simulation battery power\n",
+    "    dataDict = dynF.batteryPackCalcs(dataDict, i)\n",
+    "\n",
+    "    ###########################################\n",
+    "\n",
+    "    # # Increase time vector\n",
+    "    # next_t = np.array([dataDict['t0'][i] + dt])\n",
+    "    # dataDict['t0'] = np.append(dataDict['t0'], next_t)\n",
+    "\n",
+    "    # Set any negative motor torque to zero\n",
+    "    if dataDict['T_m'][i] < 0:\n",
+    "        dataDict['T_m'][i] = 0\n",
+    "\n",
+    "# # Trapezoidal approximation for energy used\n",
+    "# energy, totalEnergy = dynF.trapezoidApprox(dataDict['P_battery'])\n",
+    "# dataDict['Energy Use'] = energy\n",
+    "\n",
+    "# OLenergy, OLTotalEnergy = dynF.trapezoidApprox(dataDict['P_battery_OL'])\n",
+    "# dataDict['Energy Use OL'] = OLenergy\n",
+    "\n",
+    "dataDict['Max Values'][1] = totalEnergy\n",
+    "print('Energy Used (This Sim): ', totalEnergy, 'kWh')\n",
+    "# print('Energy Used (Optimum Lap): ', OLTotalEnergy, 'kWh')\n",
+    "\n",
+    "# Determine SoCe based on this!\n",
+    "dataDict = dynF.SoCenergy(dataDict, knownTotalEnergy)\n",
+    "\n",
+    "# Determination of maximum power\n",
+    "dataDict['P_battery'] = dataDict['P_battery'] / 1000        # convert to kW\n",
+    "# dataDict['P_battery_OL'] = dataDict['P_battery_OL'] / 1000\n",
+    "dataDict['P_battery_regen'] = dataDict['P_battery_regen'] / 1000\n",
+    "maxPower = max(dataDict['P_battery'])\n",
+    "# OLMaxPower = max(dataDict['P_battery_OL'])\n",
+    "averagePower = np.mean(dataDict['P_battery'])\n",
+    "# averageOLPower = np.mean(dataDict['P_battery_OL'])\n",
+    "\n",
+    "# dataDict['Max Values'][2] = \"Max power Used (kW)\"\n",
+    "dataDict['Max Values'][3] = maxPower\n",
+    "print(\"Max Power (This Sim): \", maxPower, \"kW\")\n",
+    "# print(\"Max Power (Optimum Lap): \", OLMaxPower, \"kW\")\n",
+    "print(\"Avg Power (This Sim): \", averagePower, \"kW\")\n",
+    "# print(\"Avg Power (Optimum Lap): \", averageOLPower, \"kW\")\n",
+    "print(\"Car Mass: \" + str(mass) + \" kg\")\n",
+    "\n",
+    "# Now cut all arrays down to the correct size before inputting into a dataframe\n",
+    "# time_size = len(dataDict['t0'])\n",
+    "# for i in range(0, len(headers)):\n",
+    "#     dataDict[headers[i]] = dataDict[headers[i]][:time_size]\n",
+    "\n",
+    "# Additional Outputs\n",
+    "dataDict['v0'] = dataDict['v0'] * 3.6            # convert to km/h\n",
+    "print(\"Total Time: \", dataDict['t0'][-1], \"s\")\n",
+    "print(\"Lap Time: \", dataDict['t0'][-1] / numLaps, \"s\")\n",
+    "print(\"Final SoC(c): \", dataDict['SoC Capacity'][-1], \"%\")\n",
+    "\n",
+    "# Now I want to write all the columns to a dictionary and then input it into a dataframe - since it's easier to do column-wise\n",
+    "dfData = pd.DataFrame(dataDict)\n",
+    "dfData.dropna(inplace = True)\n",
+    "\n",
+    "# Drop extra columns based on the size of the time vector\n",
+    "outfile = \"dynamicsCalcs.csv\"\n",
+    "dfData.to_csv(outfile, index=False)\n",
+    "\n",
+    "# Create plots\n",
+    "dynF.plotData(dataDict)\n",
+    "print(\"Completed\")"
    ]
   }
  ],
