Current working simulation - for AMK motors. Some simulation constants are estimated and inaccurate. Currently reporting TOO HIGH energy usage - so will need to debug that.

--- a/sim_data_prep.ipynb
+++ b/sim_data_prep.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\users\\mjmox\\anaconda3\\envs\\formulae\\lib\\site-packages (1.26.4)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Requirement already satisfied: pandas in c:\\users\\mjmox\\anaconda3\\envs\\formulae\\lib\\site-packages (2.2.2)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\mjmox\\anaconda3\\envs\\formulae\\lib\\site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\mjmox\\anaconda3\\envs\\formulae\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\mjmox\\anaconda3\\envs\\formulae\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\mjmox\\anaconda3\\envs\\formulae\\lib\\site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\mjmox\\anaconda3\\envs\\formulae\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install numpy\n",
+    "%pip install pandas"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -19,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.026933333333333333\n"
+      "0.02693333333333333\n"
      ]
     }
    ],
@@ -67,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,11 +226,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
+    "cols = ['Speed','Torque']\n",
     "\n",
     "infile1 = \"AMK_Peak_Torque_Speed.csv\"\n",
     "AMK_peak_df = pd.read_csv(infile1)\n",
@@ -220,12 +248,15 @@
     "Step 2: Torque-Speed AND Current\n",
     "* A more detailed plot from AMK for motor torque based on speed and current\n",
     "* Conditions from AMK include: Current is varied from 0 to 105 A in steps of 5.25 A\n",
-    "* Motor rpm is varied from 0 to 20,000 rpm in steps of 100 rpm"
+    "* Motor rpm is varied from 0 to 20,000 rpm in steps of 100 rpm\n",
+    "\n",
+    "So the concept here is:\n",
+    "* Initially, we start with peak torque (or continuous torque) - then we decrease the torque or speed or whatever based on current-limiting requirements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,21 +388,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -426,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
