Functioning model, added readme

--- a/lapsim_V2.0.ipynb
+++ b/lapsim_V2.0.ipynb
@@ -146,7 +146,7 @@
     "rho_air = 1.204         # air density: kg / m^3\n",
     "v_air = 0               # air velocity: m/s\n",
     "radsToRpm = 1 / (2 * math.pi) * 60    # rad/s --> rpm\n",
-    "max_power = 80000       # kW\n",
+    "max_power = 80000       # W\n",
     "\n",
     "# Battery Pack - Calculated Values\n",
     "num_cells = num_series_cells * num_parallel_cells\n",
