--- a/lapsim_V2.0.ipynb
+++ b/lapsim_V2.0.ipynb
@@ -41,31 +41,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'csv' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 83\u001b[0m\n\u001b[0;32m     76\u001b[0m \u001b[38;5;66;03m######################################################################\u001b[39;00m\n\u001b[0;32m     77\u001b[0m \u001b[38;5;66;03m# This allows an external user to have control over the constants without touching the code\u001b[39;00m\n\u001b[0;32m     78\u001b[0m \n\u001b[0;32m     79\u001b[0m \u001b[38;5;66;03m# Open .csv and take constants as input:\u001b[39;00m\n\u001b[0;32m     80\u001b[0m \n\u001b[0;32m     81\u001b[0m \u001b[38;5;66;03m# Open the file\u001b[39;00m\n\u001b[0;32m     82\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(constantsInPath, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m, newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m infile:\n\u001b[1;32m---> 83\u001b[0m     reader \u001b[38;5;241m=\u001b[39m \u001b[43mcsv\u001b[49m\u001b[38;5;241m.\u001b[39mreader(infile)\n\u001b[0;32m     84\u001b[0m     dataList \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(reader)\n\u001b[0;32m     85\u001b[0m     dataList\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;241m0\u001b[39m)             \u001b[38;5;66;03m# Remove title row\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'csv' is not defined"
+     ]
+    }
+   ],
    "source": [
     "############################################################################\n",
     "# Mallory Moxham - UBC Formula Electric - July 2024\n",
     "############################################################################\n",
     "\n",
-    "# FILE PATHS! (CHANGE THESE TO FIT YOUR COMPUTER PLEASE!)\n",
+    "# FILE PATHS!\n",
     "# For input constants, change to applicable name:\n",
-    "constantsInPath = r'C:\\VSCode_Python\\LapSim_V2\\sim_inputs_and_outputs\\LapSimConstants.csv'\n",
+    "constantsInPath = \"sim_inputs_and_outputs/LapSimConstants.csv\"\n",
     "# For output .csv\n",
-    "fullDataOutPath = r'C:\\VSCode_Python\\LapSim_V2\\sim_inputs_and_outputs\\dynamicsCalcs.csv'\n",
+    "fullDataOutPath = \"sim_inputs_and_outputs/dynamicsCalcs.csv\"\n",
     "# For output plots\n",
-    "outputPlotPath = \"C:\\\\VSCode_Python\\\\LapSim_V2\\\\sim_inputs_and_outputs\\\\\"\n",
+    "outputPlotPath = \"sim_inputs_and_outputs/\"\n",
     "# For simple summary outputs\n",
-    "summaryOutPath = \"C:\\\\VSCode_Python\\\\LapSim_V2\\\\sim_inputs_and_outputs\\\\\"\n",
+    "summaryOutPath = \"sim_inputs_and_outputs/\"\n",
     "# For input cell data\n",
-    "cellDataPath = r'C:\\VSCode_Python\\LapSim_V2\\sim_inputs_and_outputs\\cellSelectionData.csv'\n",
+    "cellDataPath = \"sim_inputs_and_outputs/cellSelectionData.csv\"\n",
     "# AMK data input\n",
-    "AMKData = r'C:\\VSCode_Python\\LapSim_V2\\data_prep_scripts\\AMK_data.json'\n",
+    "AMKData = \"data_prep_scripts/AMK_data.json\"\n",
     "# Optimum Lap Data\n",
-    "OLData = r'C:\\VSCode_Python\\LapSim_V2\\sim_inputs_and_outputs\\OptimumLapSim61.40.csv'\n",
+    "OLData = \"sim_inputs_and_outputs/OptimumLapSim61.40.csv\"\n",
     "# Optimum Lap Plot Path\n",
-    "OLPlotPath = \"C:\\\\VSCode_Python\\\\LapSim_V2\\\\sim_inputs_and_outputs\\\\\"\n",
+    "OLPlotPath = \"sim_inputs_and_outputs/\"\n",
     "\n",
     "# USER-INPUT CONSTANTS\n",
     "# STRING CONSTANTS\n",
