Adding SoC Approximation

--- a/data_prep_scripts/sim_data_prep.ipynb
+++ b/data_prep_scripts/sim_data_prep.ipynb
@@ -440,6 +440,77 @@
     "\n",
     "dtotal['a1'] = df # answer is yes!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### P28A Battery SoC Curve Data\n",
+    "Using https://plotdigitizer.com/app again to generate a .csv file of the plots!\n",
+    "\n",
+    "Some notes for myself:\n",
+    "1) This is given in \"depth of discharge\" - so the amount of capacity decrease. I could also just change the x-axis to make it the opposite... I think I'll do that.\n",
+    "2) To make it so that I don't have to make as many points on the curves - I will interpolate between the points when I make the calculations.\n",
+    "3) I will just jump to the closest curve (findClosestMatch) when choosing which to use\n",
+    "\n",
+    "I accidentially recorded the curves in this order: red, blue, green\n",
+    "\n",
+    "**Post Data Cleaning:**\n",
+    "1) The different C-rates will not have the same number of datapoints, so these will need to be in separate dictionaries or dataframes.\n",
+    "2) Capacity data must follow a downdward trend.\n",
+    "3) Capacity is in units of mAh.\n",
+    "4) Voltage is in units of V.\n",
+    "5) Will initially start with multiindexing to cleanly evaluate data. Then I will split them into their own categories."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "\n",
+    "infile = \"P28A_SoC_curve_initial.csv\"\n",
+    "\n",
+    "SoC_df = pd.read_csv(infile, header = [0,1])\n",
+    "\n",
+    "# Clean data\n",
+    "# DONE 1) Ensure that first datapoint is at 4.2 V and 2800 mAh (changed manually)\n",
+    "# 2) Make sure that all capacity and voltage values are consistently decreasing\n",
+    "# 3) Switch all mAh values to Ah\n",
+    "# 4) Split data into nested dictionary\n",
+    "\n",
+    "# Set up data for cleaning\n",
+    "level_0 = list(SoC_df.columns.get_level_values(0))\n",
+    "level_1 = list(SoC_df.columns.get_level_values(1))\n",
+    "\n",
+    "# For each capacity curve - switch units to Ah\n",
+    "# For each capacity curve - check to make sure that no values are smaller than the ones before\n",
+    "for i in range(0, len(level_0), 2):\n",
+    "    # Check continuity\n",
+    "    for j in range(1, len(SoC_df)):\n",
+    "        if SoC_df.loc[j - 1, (level_0[i],level_1[i])] < SoC_df.loc[j, (level_0[i],level_1[i])]:\n",
+    "            print(\"Continuity Issue in Column %s %s and Row %d\" % (level_0[i], level_1[i], j))  # Checking shows that there are no continuity issues\n",
+    "\n",
+    "    # Afterwards, convert to Ah\n",
+    "    SoC_df.loc[:, (level_0[i],level_1[i])] = SoC_df.loc[:, (level_0[i],level_1[i])] / 1000  # convert mAh to Ah\n",
+    "\n",
+    "# Now we can move forward and transfer to nested dictionaries\n",
+    "SoC_dict = {level_0[0]: None, level_0[2]: None, level_0[4]: None, level_0[6]: None} # Setting up first nested level\n",
+    "\n",
+    "# Now go through df and transfer to dict\n",
+    "for i in range(0, len(level_0), 2):\n",
+    "    input = SoC_df[level_0[i]].dropna()\n",
+    "    SoC_dict[level_0[i]] = input.to_numpy()\n",
+    "\n",
+    "# Now save to pickle file\n",
+    "outfile = \"P28_SoC_curve.pkl\"\n",
+    "with open(outfile, \"wb\") as file:\n",
+    "    pickle.dump(SoC_dict, file)"
+   ]
   }
  ],
  "metadata": {
