cleaning up the power calculations

--- a/validation/upload_comp_data.ipynb
+++ b/validation/upload_comp_data.ipynb
@@ -16,7 +16,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "infile = \"2024-06-15_13_00_endurance_1.csv\"\n",
+    "infile = \"../../LapSim_Validation/2024-06-15_13_00_endurance_1.csv\"\n",
     "\n",
     "data_df = pd.read_csv(infile)"
    ]
@@ -93,7 +93,7 @@
    "source": [
     "# Export as pickle file\n",
     "import pickle\n",
-    "outpath = \"temp_signal_dict.pkl\"\n",
+    "outpath = \"../../LapSim_Validation/temp_signal_dict.pkl\"\n",
     "\n",
     "with open(outpath, \"wb\") as file:\n",
     "    pickle.dump(signal_dict, file)"
@@ -157,7 +157,7 @@
     "# Reload signal dict if errors occur during debugging\n",
     "\n",
     "import pickle\n",
-    "infile = \"temp_signal_dict.pkl\"\n",
+    "infile = \"../../LapSim_Validation/temp_signal_dict.pkl\"\n",
     "\n",
     "with open(infile, \"rb\") as file:\n",
     "    signal_dict = pickle.load(file)"
@@ -10213,7 +10213,7 @@
    "source": [
     "# Export as pickle file\n",
     "import pickle\n",
-    "outpath = \"signal_dict.pkl\"\n",
+    "outpath = \"../../LapSim_Validation/signal_dict.pkl\"\n",
     "\n",
     "with open(outpath, \"wb\") as file:\n",
     "    pickle.dump(signal_dict, file)"
@@ -10227,7 +10227,7 @@
    "source": [
     "# Export as pickle file\n",
     "import pickle\n",
-    "outpath = \"signal_dict.pkl\"\n",
+    "outpath = \"../../LapSim_Validation/signal_dict.pkl\"\n",
     "\n",
     "with open(outpath, \"rb\") as file:\n",
     "    temp_signal_dict = pickle.load(file)"
