--- a/validation/clean_comp_data.ipynb
+++ b/validation/clean_comp_data.ipynb
@@ -18,7 +18,7 @@
     "import pickle\n",
     "\n",
     "# Upload data\n",
-    "infile = \"../../LapSim_Validation/signal_dict.pkl\"\n",
+    "infile = \"../../LapSim_Validation/signal_dict.pkl\"      ## !!! Replace with your file location !!! ##\n",
     "with open(infile, \"rb\") as file:\n",
     "    signal_dict = pickle.load(file)"
    ]
@@ -772,7 +772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inverter DC Bus Current"
+    "Plotting Function"
    ]
   },
   {
