validation for storage losses while pack is in Montana

--- a/validation/clean_comp_data.ipynb
+++ b/validation/clean_comp_data.ipynb
@@ -1017,6 +1017,7 @@
    ],
    "source": [
     "accVoltage = nestedDict(signal_dict, \"BMS_TractiveSystemVoltage\")\n",
+    "accVoltage2 = nestedDict(signal_dict, \"BMS_PackVoltage\")\n",
     "\n",
     "plotVsTime([accVoltage], \"Voltage (V)\", \"Accumulator Voltage\", xlimits=[0,475])"
    ]
