--- a/validation/storage_losses.ipynb
+++ b/validation/storage_losses.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
     "segment_voltage = 319.75 / 5\n",
     "\n",
     "# Current from battery\n",
-    "resistance = 200 * 10^3 # Ohms\n",
+    "resistance = 200 * 10**3 # Ohms\n",
     "current = segment_voltage / resistance\n",
     "\n",
     "CRate = current / 17.7 # 0.0018 C (VERY LOW)"
@@ -193,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "55.936295556665"
+       "0.560202"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
