hopefully I've finally fixed all of the commit errors!!!

--- a/validation/TMS_lateral_radial.ipynb
+++ b/validation/TMS_lateral_radial.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "# Resulting range of thermal resistances\n",
     "# kz, H are the same from before\n",
-    "# Thermal resistances = 1 / (kz * H)\n",
+    "# Thermal resistances = 1 / (kz A* H)\n",
     "\n",
     "Rth = 1 / (kz * H)\n",
     "Rth"
