--- a/validation/heat_removal.ipynb
+++ b/validation/heat_removal.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        " 35.68618943081839]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -284,11 +284,11 @@
     {
      "data": {
       "text/plain": [
-       "array([  22.32676137,   29.56248859,   43.73687195,   84.02404058,\n",
-       "       1065.29413047])"
+       "array([ 102.95117742,  136.3159196 ,  201.67557622,  387.44418711,\n",
+       "       4912.1896016 ])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,11 @@
     "\n",
     "# Resulting heat transfer coefficient: R = 1/(hA) -therefore- h = 1/RA\n",
     "htc = 1 / (area_18650 * np.array(possible_Rs))\n",
-    "htc"
+    "\n",
+    "# If we only consider cooling from the bottom, then we'll see the following:\n",
+    "bottom_area_18650 = (pi * 18**2) / 1000**2\n",
+    "htc_axial = 1 / (bottom_area_18650 * np.array(possible_Rs))\n",
+    "htc_axial"
    ]
   }
  ],
