--- a/validation/Busbar Design/busbars.ipynb
+++ b/validation/Busbar Design/busbars.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -160,12 +160,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Accumulator Bussing"
+    "### Vehicle Wiring"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "['1', '2', '4', '6']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "6     16   4.513517"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
