Conclusion - we can easily fan cool

--- a/validation/SB Thermals/PCM_Transformer_REV0.ipynb
+++ b/validation/SB Thermals/PCM_Transformer_REV0.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,6 +150,44 @@
    "metadata": {},
    "source": [
     "Wire Data and Information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.323"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "####### UPLOAD AND ANALYZE WIRE DATA\n",
+    "wire_data = pd.read_csv(\"Wire_Gauge_Data.csv\", header=[0], skiprows=[1])    # skip the row with the units since I don't want to deal with that\n",
+    "wire_data = wire_data.iloc[::-1,:].reset_index(drop=True)                   # reverse rows and reset index\n",
+    "\n",
+    "# Coil Parameters - just conductor and insulated conductor\n",
+    "D_cu = wire_data.loc[:,'Conductor Diameter'].to_numpy()\n",
+    "D_ins = wire_data.loc[:,'Finished Wire Diameter'].to_numpy()\n",
+    "Th_ins = wire_data.loc[:,'Enameled Insulation Thickness'].to_numpy()\n",
+    "Gauge = wire_data.loc[:, 'Gauge'].to_numpy()\n",
+    "\n",
+    "index = np.searchsorted(wire_data.loc[:,'Gauge'], 14)\n",
+    "\n",
+    "\n",
+    "# index = np.searchsorted(Gauge, 10)\n",
+    "\n",
+    "# D_Cu_1 = D_cu[index]\n",
+    "D_Cu_1 = wire_data.loc[index, 'Conductor Diameter']\n",
+    "\n",
+    "D_Cu_1"
    ]
   },
   {
